# liblifx

./: CMakeLists.txt  README.md
include/: frame.h
lib/: frame.c
src/: discover.c  main.c  sdl.c
